--- a/src/utils/default.css
+++ b/src/utils/default.css
@@ -2,3 +2,16 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+h1, h2, h3, h4, p, a, span {
+  padding: 0;
+}
+
+img {
+  object-fit: contain;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
