--- a/src/utils/vars.css
+++ b/src/utils/vars.css
@@ -8,5 +8,5 @@
   --color-title: #8B9A7D;
   --color-additional: #C9A153;
 
-  --font-family-base: 'Source Serif 4', Arial, sans-serif;
+  --font-family-base: 'Source Serif 4', 'Inter', Arial, sans-serif;
 }
