feat(App): создать постоянные и модуль PageTitleSection

--- a/src/pages/App/App.scss
+++ b/src/pages/App/App.scss
@@ -7,3 +7,9 @@
   color: var(--color-base);
   background-color: var(--background-base);
 }
+
+.main {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
