--- a/src/modules/BasePlan/BasePlan.scss
+++ b/src/modules/BasePlan/BasePlan.scss
@@ -19,6 +19,12 @@
 
 .base-plan__mark {
   position: absolute;
+  transition-duration: .7s;
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(1.3);
+  }
 }
 
 .base-plan__house-number {
