--- a/src/components/HouseCard/HouseCard.scss
+++ b/src/components/HouseCard/HouseCard.scss
@@ -17,6 +17,24 @@
   line-height: 27px;
   font-weight: 500;
   white-space: preserve-breaks;
+  overflow-y: auto;
+  // scrollbar-width: thin;
+
+  &::-webkit-scrollbar {
+    width: 10px;
+    background-color: var(--background-secondary);
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: var(--color-title);
+  }
+  
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    background-color: var(--background-secondary);
+  }
 }
 
 .house-card__bold-text {
