--- a/src/modules/Footer/Footer.scss
+++ b/src/modules/Footer/Footer.scss
@@ -30,6 +30,12 @@
   font-size: 30px;
   line-height: 41px;
   font-weight: 400;
+
+  &_small {
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .footer__contact {
